--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -136,6 +136,8 @@ aside {
   }
 }
 
+/* User gravatar */
+
 section.user_info {
   padding-bottom: 10px;
   margin-top: 20px;
@@ -154,7 +156,6 @@ section.user_info {
 
 .gravatar {
   float: left;
-  margin-right: 10px;
   max-width: 50px;
   border-radius: 50%;
 }
